# parakeet-speaker-search

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  context_inference.py  database.py  diarization.py  ingest.py  main.py  merger.py  models.py  search.py  storage.py  transcription.py
app/routes/: files.py  search.py
docs/superpowers/plans/: 2026-06-23-transcription-eval-harness.md
docs/superpowers/specs/: 2026-06-23-transcription-eval-harness-design.md
eval/: README.md  __init__.py  __main__.py  align.py  audio.py  cli.py  metrics.py  models.py  normalize.py  reference.py  report.py
eval/engines/: apple_voicememos.py  assemblyai.py  base.py  deepgram.py  elevenlabs.py  gemini.py  groq_whisper.py  openai_whisper.py  parakeet_mlx.py
openspec/changes/add-context-injection/: design.md  proposal.md  tasks.md
openspec/changes/add-context-injection/specs/context-aware-transcription/: spec.md
openspec/changes/archive/2026-06-19-add-context-injection/: design.md  tasks.md
openspec/specs/context-aware-transcription/: spec.md
scripts/: init_db.sql
tests/: conftest.py  test_api.py  test_config.py  test_context_inference.py  test_diarization.py  test_ingest.py  test_integration_context.py  test_merger.py  test_search.py  test_storage.py  test_transcription.py
tests/eval/: test_align.py  test_apple_engine.py  test_audio.py  test_cli.py  test_e2e_smoke.py  test_engine_base.py  test_groq_deepgram_engines.py  test_metrics.py  test_models.py  test_normalize.py  test_parakeet_engine.py  test_premium_engines.py  test_reference.py  test_report.py
(+1 files in other folders)
