[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parakeet-speaker-search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.2",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "groq",
    "pyannote.audio>=3.3.2",
    "sentence-transformers>=3.1.0",
    "numpy>=1.26.0",
    "pydantic-settings>=2.4.0",
    "jiwer>=3.0.0",
    "meeteval>=0.3.0",
    "whisper_normalizer>=0.0.10",
    "pyannote.metrics>=3.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]
engines = [
    "parakeet-mlx>=0.3.0",
    "silero-vad>=5.1.0",
    "assemblyai>=0.34.0",
    "elevenlabs>=1.50.0",
    "openai>=1.50.0",
    "google-genai>=0.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
